# muf-studio

./: .gitignore  README.md  main.py  pyproject.toml
docs/: architecture.md  planning_floating_webcam.md  planning_screen_recording.md
docs/ai_report/: 001_floating_webcam.md  002_screen_annotation_text.md  005_fix_overlay_focus_stealing_toolbar_unclickable.md  006_fix_text_input_keyboard_blocked.md  007_screen_recording_feature.md  008_fix_exe_recordings_path.md  009_fix_audio_video_sync.md
muf_studio/: __init__.py  annotation_toolbar.py  camera.py  control_panel.py  gui.py  recorder.py  screen_brush.py
tests/: test_camera.py  test_control_panel.py  test_gui.py  test_integration.py  test_overlay_focus_fix.py  test_recorder.py  test_recorder_gui.py  test_screen_brush.py  test_text_input_keyboard.py
