[project]
name = "muf-studio"
version = "0.1.0"
description = "Desktop presentation studio with floating webcam, screen annotation, and control panel — built with PyQt6"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pyqt6>=6.11.0",
    "pytest>=9.1.1",
    "pytest-qt>=4.5.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
