[project]
name = "muf-studio"
version = "0.1.0"
description = "Desktop presentation studio with floating webcam, screen annotation, and control panel — built with PyQt6"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=10.2.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyinstaller>=6.21.0",
    "pyqt6>=6.11.0",
    "pytest>=9.1.1",
    "pytest-qt>=4.5.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
